<resources>
    <string name="app_name">StudySync</string>
    <string name="course">Course</string>
    <string name="b.tech">B.Tech Computer Science</string>
    <string name="B.tech">Bachelor of Engineering</string>
    <string name="book">📘</string>
    <string name="Edit_name">Edit Name</string>
    <string name="Name_Icon">Name Icon</string>
    <string name="NAme">Name</string>
    <string name="Subject_Icon">Subject Icon</string>
    <string name="algo">Data Structures &amp; Algorithms</string>
    <string name="Edit_Subject">Edit Subject</string>
    <string name="subject">Subject</string>
    <string name="Ds">Data Structure</string>
    <string name="gmail">deepikamann768@gmail.com</string>
    <string name="star">*******</string>
    <string name="abc">Open Study Tracker</string>
    <string name="dashboard">Dashboard</string>
    <string name="Hours">Daily Study: 4 hrs</string>
    <string name="photo">Change Profile Photo</string>
    <string name="student">Student</string>
    <string name="Deepika">Deepika Mann</string>
    <string name="Edit">Edit Profile</string>
    <string name="Name">Name</string>
    <string name="Enter_name">Enter Name</string>
    <string name="Course">Course</string>
    <string name="Enter_course">Enter Course</string>
    <string name="Subject">Subject</string>
    <string name="Enter_subject">Enter Subject</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Enter_email">Enter Email</string>
    <string name="Enter_password">Enter Password</string>
    <string name="Save">Save Changes</string>
    <string name="Subject_name">Subject Name</string>
    <string name="login_title">StudySync Login</string>
    <string name="btn">Continue</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_btn">Login</string>
    <string name="Basic_Info"> StudySync BasicInfo</string>
    <string name="Course_name">Course Name</string>
    <string name="subjects">Subjects</string>
    <string name="Routine">Routine</string>
    <string name="submit">Submit</string>
    <string name="Add">+ Add Subjects</string>
    <string name="Physics">Physics</string>
    <string name="Mathematics">Mathematics</string>
    <string name="MAD">MAD</string>
    <string name="WAD">WAD</string>
    <string name="DSA">Data Structure</string>
    <string name="Tag_line">Enter your course name and add subjects to get started.</string>
    <string name="Completed">✔ 0 Completed</string>
    <string name="pending">⏰ 0 Pending</string>
    <string name="missed">❕0 Missed</string>
    <string name="tag">Your Tasks for Today</string>
    <string name="revision">In Revision List</string>
    <string name="dot">00:00</string>
    <string name="miss">Tasks Missed</string>
    <string name="Course1">Course</string>
    <string name="Email_Icon">Email Icon</string>
    <string name="Email1">Email</string>
    <string name="Edit_Email">Edit Email</string>
    <string name="avg">Avg Study Hours</string>
    <string name="hrs">0 hrs</string>
    <string name="min">Time Today: 0 mins</string>
    <string name="topic1">+ Add Topic</string>
    <string name="topic">Enter topic</string>
    <string name="time">Select Time</string>
    <string name="field">Field Title</string>
    <string name="Subject1">Subject</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="completed_f">Task Completed</string>
    <string name="Profile_Tracker">Profile Tracker</string>
    <string name="zero">0</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="start">Start Study</string>
    <string name="maths">✔ Math Assignment    </string>
    <string name="physics">✔ ⬜ Physics Exercise   </string>
    <string name="chemistry">❌ Chemistry Homework  </string>
    <string name="history">✔ History Reading     </string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="tag2">Review completed topics of today?</string>
    <string name="list">Today Task List</string>
    <string name="ADD_TAsk">Add Task</string>
    <string name="percent">0%</string>
    <string name="Task">Task</string>
    <string name="Toady">Todays Task</string>
    <string name="Profile">Profile</string>
    <string name="Progress">Progress Tracker</string>
    <string name="date">Monday, 24 Feb</string>
    <string name="bell">🔔</string>
    <string name="lines">☰</string>
    <string name="hello">Hello, Deepika 👋</string>
    <string name="your">Your Subjects</string>
    <string name="Pending">Pending</string>
    <string name="select_time">Select Time</string>
    <string name="selected_time">Selected Time: %1$s</string>
    <string name="add_subject">Add Subject</string>
    <string name="enter_subject_hint">Enter subject name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_topic">Add Topic</string>
    <string name="topic_name_hint">Topic Name</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_message">Are you sure you want to sign out?</string>

</resources>