<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="#E3F2FD">

    <!-- Title -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#0D47A1"
        android:layout_marginBottom="28dp" />

    <!-- Email -->
    <EditText
        android:autofillHints="emailAddress"
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="16dp" />

    <!-- Password -->
    <EditText
        android:id="@+id/password"
        android:drawableEnd="@drawable/ic_eye"
        android:drawableStart="@drawable/ic_lock"
        android:layout_width="300dp"
        android:autofillHints="password"
        android:layout_height="50dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="24dp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/login_btn"
        android:textAllCaps="false"
        android:background="@drawable/rounded_bg"
        android:textColor="@android:color/white" />

</LinearLayout>